# DeltaLens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_e2e.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deltalens/: __init__.py  allocator.py  classifier.py  cli.py  config.py  flows.py  graph.py  incremental.py  models.py  parser.py  scorer.py  search.py  server.py
deltalens/hooks/: file_watcher.py
evaluate/: runner.py
hooks/: post-commit
tests/: test_allocator.py  test_classifier.py  test_graph.py  test_multilang.py  test_parser.py  test_scorer.py  test_search.py
tests/fixtures/: sample.js  sample.py  sample.ts
